--- a/.github/workflows/dart-compile.yml
+++ b/.github/workflows/dart-compile.yml
@@ -19,3 +19,6 @@ jobs:
 
       - name: Dart compile
         run: dart compile js example/main.dart
+
+      - name: Dart try publish
+        run: dart pub publish --dry-run
