--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,13 @@ description: This SDK allows you to work with Aspose.BarCode for Cloud REST APIs
 version: 0.22.7
 homepage: https://github.com/aspose-barcode-cloud/aspose-barcode-cloud-dart
 
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  windows:
+
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
