Switch master -> main

--- a/.github/workflows/dart-compile.yml
+++ b/.github/workflows/dart-compile.yml
@@ -2,9 +2,9 @@ name: "Dart compile"
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, main ]
 
 jobs:
   build:
