Github actions cleanup

--- a/.github/workflows/dart-compile.yml
+++ b/.github/workflows/dart-compile.yml
@@ -2,9 +2,9 @@ name: "Dart test"
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ main ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ main ]
 
 jobs:
   build:
