--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: aspose_barcode_cloud
 description: This SDK allows you to work with Aspose.BarCode for Cloud REST APIs in your Dart or Flutter applications quickly and easily
-version: 0.23.8+2
+version: 0.23.9
 homepage: https://github.com/aspose-barcode-cloud/aspose-barcode-cloud-dart
 
 platforms:
