Use lints/recommended.yaml instead of lints/core.yaml

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,2 @@
-include: package:lints/core.yaml
-# More strict
-# include: package:lints/recommended.yaml
+# More strict than package:lints/core.yaml
+include: package:lints/recommended.yaml
