Added snippets test to ci
Env var name unification

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,7 +18,10 @@ jobs:
         run: dart pub get
 
       - name: Dart test
-        run: dart test
+        run: | 
+          dart test
+          chmod +x scripts/*
+          ./scripts/run_snippets.sh
         env:
           TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
 
