--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,7 +21,8 @@ jobs:
         run: | 
           dart test
           chmod +x scripts/*
-          ./scripts/run_snippets.sh
+          ./scripts/run_snippets.sh   
+          git clean -df
         env:
           TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
 
