--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,7 +22,7 @@ jobs:
           dart test
           chmod +x scripts/*
           ./scripts/run_snippets.sh   
-          git clean -dfX
+          git checkout scripts qr.png
         env:
           TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
 
